// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchUserSuggestion > SearchUserSuggestion - Snapshots > matches snapshot with full user data 1`] = `
<div
  aria-label="User John Doe (abc1...f456)"
  class="flex min-w-0 cursor-pointer items-center gap-2 transition-opacity hover:opacity-80"
  data-cy="search-user-suggestion-pk:abc123def456"
  data-testid="search-user-suggestion-pk:abc123def456"
>
  <div
    data-name="John Doe"
    data-size="md"
    data-testid="avatar"
  >
    Avatar
  </div>
  <div
    class="flex min-w-0 flex-1 flex-col items-start"
  >
    <span
      class="block max-w-full truncate text-sm font-bold text-foreground"
      data-testid="user-name"
    >
      John Doe
    </span>
    <span
      class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground uppercase"
      data-testid="user-pubky"
    >
      abc1...f456
    </span>
  </div>
</div>
`;

exports[`SearchUserSuggestion > SearchUserSuggestion - Snapshots > matches snapshot without avatar 1`] = `
<div
  aria-label="User Jane Doe (xyz789)"
  class="flex min-w-0 cursor-pointer items-center gap-2 transition-opacity hover:opacity-80"
  data-cy="search-user-suggestion-pk:xyz789"
  data-testid="search-user-suggestion-pk:xyz789"
>
  <div
    data-name="Jane Doe"
    data-size="md"
    data-testid="avatar"
  >
    Avatar
  </div>
  <div
    class="flex min-w-0 flex-1 flex-col items-start"
  >
    <span
      class="block max-w-full truncate text-sm font-bold text-foreground"
      data-testid="user-name"
    >
      Jane Doe
    </span>
    <span
      class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground uppercase"
      data-testid="user-pubky"
    >
      xyz789
    </span>
  </div>
</div>
`;
